--- a/app/heroes/heroes.component.html
+++ b/app/heroes/heroes.component.html
@@ -8,6 +8,6 @@
 	<h2>
     {{selectedHero.name | uppercase}} is my hero
   	</h2>
-	<button (click)="goToDetail(selectedHero)">Go to detail</button>
+	<button (click)="goToDetail(selectedHero)" class="btn btn-default">Go to detail</button>
 </div>
 <new-hero></new-hero>
