--- a/app/hero-form/hero-form.component.html
+++ b/app/hero-form/hero-form.component.html
@@ -3,7 +3,10 @@
     <form>
         <div class="form-group">
             <label for="name">Name</label>
-            <input type="text" class="form-control" required [(ngModel)]="model.name">
+            <input type="text" class="form-control" required [(ngModel)]="model.name" ngControl="name" #name="ngForm">
+            <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
+                Name is required
+            </div>
         </div>
         <div class="form-group">
             <label for="alterEgo">Alter Ego</label>
